Error handling improved + better code explanations

--- a/templates/public/public.html
+++ b/templates/public/public.html
@@ -12,17 +12,9 @@
 </div>
 
 <div class="container-fluid mt-2">
-    <p>Lorem Ipsum dolar sit amet</p>
-    <p>Dolar sit amet be removeddolar sit amet fromdolar sit amet dolar sit amet.</p>
+    <p>You are in Public View mode. Actions are limited to downloading & navigating the folder contents.</p>
 </div>
 
-<!-- File/Folder Controls-Buttonbar -->
-<div class="file-controls mb-3">
-    <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" class="btn">What</button>
-        <button type="button" class="btn">What</button>
-    </div>
-</div>
 
 <table class="table table-hover file-view">
     <thead>
