--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -6,15 +6,15 @@
 
 <!-- Header & Upload -->
 <div class="container-fluid">
-        <div class="row">
-            <h2>Dashboard</h2>
-            {% if user.is_staff %}
-            <div class="ml-4">
-                <a class="btn btn-outline-secondary" href="{% url 'admin:index' %}">Go to Admin Area</a>
-            </div>
-            {% endif %}
+    <div class="row">
+        <h2>Dashboard</h2>
+        {% if user.is_staff %}
+        <div class="ml-4">
+            <a class="btn btn-outline-secondary" href="{% url 'admin:index' %}">Go to Admin Area</a>
         </div>
+        {% endif %}
     </div>
+</div>
 
 <div class="container-fluid mt-3">
     <div class="row">
@@ -68,26 +68,36 @@
 </div>
 
 <div class="container-fluid">
-    <div class="col-md-4">
-        <form action="{% url 'save_preferences' %}" method="POST">
-            {% csrf_token %}
-            <label>Name & Surname</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" name="first_name" value="{{user.first_name}}">
-                <input type="text" class="form-control" name="last_name" value="{{user.last_name}}">
-                <div class="input-group-append">
-                    <input class="btn btn-outline-secondary" type="submit" value="Save">
+    <div class="row">
+        <div class="col-md-4">
+            <form action="{% url 'save_preferences' %}" method="POST">
+                {% csrf_token %}
+                <label>Name & Surname</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="first_name" value="{{user.first_name}}">
+                    <input type="text" class="form-control" name="last_name" value="{{user.last_name}}">
+                    <div class="input-group-append">
+                        <input class="btn btn-outline-secondary" type="submit" value="Save">
+                    </div>
                 </div>
-            </div>
-            <label>Recycle Bin Lifetime (Days)</label>
-            <div class="input-group mb-3">
-                <input type="number" class="form-control" name="recycle_lifetime" max="90" min="0"
-                    value="{{user_preferences.recyclebin_lifetime}}">
-                <div class="input-group-append">
-                    <input class="btn btn-outline-secondary" type="submit" value="Save">
+                <label>Recycle Bin Lifetime (Days)</label>
+                <div class="input-group mb-3">
+                    <input type="number" class="form-control" name="recycle_lifetime" max="90" min="0"
+                        value="{{user_preferences.recyclebin_lifetime}}">
+                    <div class="input-group-append">
+                        <input class="btn btn-outline-secondary" type="submit" value="Save">
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
+        <div class="col-md-4">
+            <h6>User Subscribed Groups</h6>
+            <ul>
+                {% for group in user.groups.all %}
+                <li>{{ group.name }}</li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
 </div>
 
