--- a/templates/partials/forms/_create.html
+++ b/templates/partials/forms/_create.html
@@ -12,10 +12,12 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body text-center">
+            <div class="modal-body text-center input-group">
                 <input type="hidden" name="current_folder_id" value="{{ current.id }}">
-                <input type="text" placeholder="Folder Name" name="folder_name">
-                <input type="submit" class="btn btn-primary" value="Create Folder">
+                <input class="form-control" type="text" placeholder="Folder Name" name="folder_name" required>
+                <div class="input-group-append">
+                    <input type="submit" class="btn btn-outline-secondary" value="Create Folder">
+                </div>
             </div>
         </form>
     </div>
