--- a/templates/myfiles/files.html
+++ b/templates/myfiles/files.html
@@ -66,24 +66,31 @@
 {% include 'partials/forms/_rename.html' %}
 {% include 'partials/forms/_share.html' %}
 
-<table class="table table-hover file-view">
-    <thead>
-        <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Type</th>
-            <th scope="col">Owner</th>
-            <th scope="col">Created</th>
-            <th scope="col">Size</th>
-            <th scope="col"></th>
-        </tr>
-    </thead>
+<div style="min-height: 65%" id="drop_zone" ondrop="drag_drop(event)" ondragover="return false">
+    {% if files or folders %}
+    <table class="table table-hover file-view">
+        <thead>
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Type</th>
+                <th scope="col">Owner</th>
+                <th scope="col">Created</th>
+                <th scope="col">Size</th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
 
-    <tbody id="file-view-body">
-        <!-- Folders -->
-        {% include 'partials/_folder-row.html' %}
-        <!-- Files -->
-        {% include 'partials/_file-row.html' %}
-    </tbody>
-</table>
+        <tbody id="file-view-body">
+            <!-- Folders -->
+            {% include 'partials/_folder-row.html' %}
+            <!-- Files -->
+            {% include 'partials/_file-row.html' %}
+        </tbody>
+    </table>
+    {% else %}
+    {% include 'partials/_empty-state.html' %}
+    {% endif %}
+</div>
+
 
 {% endblock %}
