--- a/templates/myfiles/files.html
+++ b/templates/myfiles/files.html
@@ -16,7 +16,7 @@
                 <label for="file-upload" class="btn" id="upload-btn">
                     <i class="fas fa-upload"></i> Upload File
                 </label>
-                <input id="file-upload" type="file" name="upload_file" />
+                <input id="file-upload" type="file" name="upload_file[]" />
             </form>
         </div>
     </div>
