--- a/templates/partials/_alerts.html
+++ b/templates/partials/_alerts.html
@@ -1,12 +1,14 @@
 {% if messages %}
-{% for message in messages %}
-<div id="message" class="container fixed-top">
-    <div class="alert alert-{{ message.tags }}" alert-dismissible role="alert">
-        <button class="close" type="button" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
-        <strong>
-            {{ message }}
-        </strong>
+<div class="fixed-top" id="message">
+    {% for message in messages %}
+    <div class="container ">
+        <div class="alert alert-{{ message.tags }}" alert-dismissible role="alert">
+            <button class="close" type="button" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
+            <strong>
+                {{ message }}
+            </strong>
+        </div>
     </div>
+    {% endfor %}
 </div>
-{% endfor %}
 {% endif %}
