ui file/folder rows update

--- a/fileup/static/css/styles.css
+++ b/fileup/static/css/styles.css
@@ -12,7 +12,10 @@ Color Scheme
     border-radius: 10px; 
     height: 65vh; 
     width: 100%; 
-    cursor: pointer;
+}
+
+.dropdown-menu i{
+    padding-right: 10px;
 }
 
 .empty-state i{
