--- a/templates/partials/_empty-state.html
+++ b/templates/partials/_empty-state.html
@@ -3,7 +3,7 @@
         <div>
             <i class="fas fa-folder-plus"></i>
             <h3>No content to view</h3>
-            <p>Drag and drop files or <a href="somelink">click to browse</a></p>
+            <p>Drag and drop files or click <b>Upload Files</b></p>
         </div>
     </div>
 </div>
