--- a/templates/myfiles/files.html
+++ b/templates/myfiles/files.html
@@ -14,7 +14,7 @@
                 {% csrf_token %}
                 <input type="hidden" name="current_folder_id" value="{{ current.id }}">
                 <label for="file-upload" class="btn" id="upload-btn">
-                    <i class="fas fa-upload"></i> Upload File
+                    <i class="fas fa-upload"></i> Upload Files
                 </label>
                 <input id="file-upload" type="file" name="upload_file[]" multiple/>
             </form>
