--- a/templates/shared/content.html
+++ b/templates/shared/content.html
@@ -15,9 +15,9 @@
                 <input type="hidden" name="shared_view" value="True">
                 <input type="hidden" name="current_folder_id" value="{{ current.id }}">
                 <label for="file-upload" class="btn" id="upload-btn">
-                    <i class="fas fa-upload"></i> Upload File
+                    <i class="fas fa-upload"></i> Upload Files
                 </label>
-                <input id="file-upload" type="file" name="upload_file[]" />
+                <input id="file-upload" type="file" name="upload_file[]" multiple/>
             </form>
         </div>
     </div>
